manifests/homer/03-homer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: assets
              mountPath: /www/assets
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: homer-config
        - name: homer-config-file
          configMap:
            name: homer-config
---
