manifests/homer/03-homer-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: homer
