manifests/homer/04-homer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
