manifests/homer/05-homer-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/component: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homer.k3s.dahan.house`)
      services:
        - name: homer
          port: 8080
  tls:
    secretName: homer-tls
